[CDAP-13461] Cloud/pipeline cleanup - Fixes vertical alignment of namespace and cloud icon, and fixes double line for buttons in pipeline canvas - Vertically aligns center tag text and + button - Changes some labels to follow sentence-style heading - Fixes vertical alignment of run profile in pipelines, and tags in tags modal - Changes boldness of tag in spotlight modal to be consistent

--- a/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
@@ -18,7 +18,7 @@
 @import '../../../styles/mixins.scss';
 $pipeline-type-icon-size: 20px;
 $top-panel-height: 55px;
-$btn-border-color: $grey-03;
+$btn-border-color: transparent;
 
 .pipeline-details-top-panel {
   height: $top-panel-height;
@@ -85,7 +85,7 @@ $btn-border-color: $grey-03;
       display: inline-block;
       position: relative;
       height: 100%;
-      border-left: 1px solid white;
+      border-left: 1px solid $btn-border-color;
 
       &.active,
       &:hover {
@@ -105,7 +105,7 @@ $btn-border-color: $grey-03;
       }
 
       &.active {
-        border-bottom-color: white;
+        border-bottom-color: $btn-border-color;
       }
 
       .pipeline-action-btn {
@@ -201,6 +201,10 @@ $btn-border-color: $grey-03;
 
     .pipeline-actions-container {
       border-bottom: 1px solid $btn-border-color;
+
+      &.active {
+        border-bottom-color: $grey-05;
+      }
 
       .pipeline-actions-popper {
         height: 100%;
