--- a/cdap-ui/app/cdap/components/Tags/Tag/Tag.scss
+++ b/cdap-ui/app/cdap/components/Tags/Tag/Tag.scss
@@ -21,6 +21,11 @@
     &.tag-btn {
       margin: 3px;
 
+      .tag-content {
+        display: flex;
+        align-items: center;
+      }
+
       .icon-close {
         font-size: 12px;
         margin-left: 5px;
